--- a/YellowstonePathology.YpiConnect.Client/YellowstonePathology.YpiConnect.Client.csproj
+++ b/YellowstonePathology.YpiConnect.Client/YellowstonePathology.YpiConnect.Client.csproj
@@ -635,28 +635,7 @@
   <ItemGroup>
     <Resource Include="Resources\Check.png" />
   </ItemGroup>
-  <ItemGroup>
-    <PublishFile Include="Microsoft.Data.SqlXml">
-      <Visible>False</Visible>
-      <Group>
-      </Group>
-      <TargetPath>
-      </TargetPath>
-      <PublishState>Exclude</PublishState>
-      <IncludeHash>True</IncludeHash>
-      <FileType>Assembly</FileType>
-    </PublishFile>
-    <PublishFile Include="SqlXmlPersistence">
-      <Visible>False</Visible>
-      <Group>
-      </Group>
-      <TargetPath>
-      </TargetPath>
-      <PublishState>Exclude</PublishState>
-      <IncludeHash>True</IncludeHash>
-      <FileType>Assembly</FileType>
-    </PublishFile>
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
