--- a/Business/BusinessObjects.csproj
+++ b/Business/BusinessObjects.csproj
@@ -322,7 +322,7 @@
     <Compile Include="Client\StandingOrder.cs" />
     <Compile Include="Client\StandingOrderCollection.cs" />
     <Compile Include="Common\PrintMateColumnTeal2.cs" />
-    <Compile Include="Common\PrintMateColumnMesh.cs" />
+    <Compile Include="Common\PrintMateColumnGreen.cs" />
     <Compile Include="Common\PrintMateColumnOrange2.cs" />
     <Compile Include="Common\PrintMateColumnPink.cs" />
     <Compile Include="Common\PrintMateColumnOrange1.cs" />
