--- a/Business/BusinessObjects.csproj
+++ b/Business/BusinessObjects.csproj
@@ -144,6 +144,7 @@
     <Compile Include="Amendment.Model\Amendment.cs" />
     <Compile Include="Amendment.Model\AmendmentCollection.cs" />
     <Compile Include="ApplicationVersion.cs" />
+    <Compile Include="Audit.Model\AncillaryStudiesAreHandledAudit.cs" />
     <Compile Include="Audit.Model\Audit.cs" />
     <Compile Include="Audit.Model\AuditCollection.cs" />
     <Compile Include="Audit.Model\AuditResult.cs" />
