--- a/UI/UserInterface.csproj
+++ b/UI/UserInterface.csproj
@@ -457,6 +457,9 @@
     <Compile Include="Surgical\PapCorrelationPage.xaml.cs">
       <DependentUpon>PapCorrelationPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Surgical\PathologistSignoutAuditMessagePage.xaml.cs">
+      <DependentUpon>PathologistSignoutAuditMessagePage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Surgical\PathologistSignoutDialog.xaml.cs">
       <DependentUpon>PathologistSignoutDialog.xaml</DependentUpon>
     </Compile>
@@ -2043,6 +2046,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="Surgical\PapCorrelationPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Surgical\PathologistSignoutAuditMessagePage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
