--- a/Business/BusinessObjects.csproj
+++ b/Business/BusinessObjects.csproj
@@ -149,12 +149,16 @@
     <Compile Include="Audit.Model\AuditCollection.cs" />
     <Compile Include="Audit.Model\AuditResult.cs" />
     <Compile Include="Audit.Model\AuditStatusEnum.cs" />
+    <Compile Include="Audit.Model\CaseHasNotFoundClientAudit.cs" />
+    <Compile Include="Audit.Model\CaseHasNotFoundProviderAudit.cs" />
+    <Compile Include="Audit.Model\CaseHasUnfinaledPeerReviewAudit.cs" />
     <Compile Include="Audit.Model\ClientNotSetAudit.cs" />
     <Compile Include="Audit.Model\AccessionOrderAudit.cs" />
     <Compile Include="Audit.Model\CanWomensHealthProfileBeFinaledAudit.cs" />
     <Compile Include="Audit.Model\AccountNoAudit.cs" />
     <Compile Include="Audit.Model\AreAllWHPTestsFinalAudit.cs" />
     <Compile Include="Audit.Model\CouldBenefitFromCCCPAudit.cs" />
+    <Compile Include="Audit.Model\GradedStainsAreHandledAudit.cs" />
     <Compile Include="Audit.Model\HER2OKToAcceptAudit.cs" />
     <Compile Include="Audit.Model\IntraoperativeConsultationCorrelationAudit.cs" />
     <Compile Include="Audit.Model\IntraoperativeConsultationFinalAudit.cs" />
@@ -163,6 +167,7 @@
     <Compile Include="Audit.Model\PqrsAudit.cs" />
     <Compile Include="Audit.Model\ProviderDisplayNameAudit.cs" />
     <Compile Include="Audit.Model\ProviderNpiAudit.cs" />
+    <Compile Include="Audit.Model\SigningUserIsAssignedUserAudit.cs" />
     <Compile Include="Audit.Model\SpecimenOrderAudit.cs" />
     <Compile Include="Audit.Model\IsOKToAdjustWHPExpectedFinalTimeAuditCollection.cs" />
     <Compile Include="Audit.Model\FinalizedAudit.cs" />
@@ -171,6 +176,7 @@
     <Compile Include="Audit.Model\PanelSetOrderAudit.cs" />
     <Compile Include="Audit.Model\DistributionNotSetAudit.cs" />
     <Compile Include="Audit.Model\SurgicalCaseHasQuestionMarksAudit.cs" />
+    <Compile Include="Audit.Model\SvhCaseHasMRNAndAccountNoAudit.cs" />
     <Compile Include="Audit.Model\TallmanMedicalRecordAudit.cs" />
     <Compile Include="Audit.Model\IsWHPAllDoneAuditCollection.cs" />
     <Compile Include="Audit.Model\PhysicianNotSetAudit.cs" />
