Add Carcinoma Testing Audit to Signout Path

--- a/Business/BusinessObjects.csproj
+++ b/Business/BusinessObjects.csproj
@@ -149,6 +149,7 @@
     <Compile Include="Audit.Model\AuditCollection.cs" />
     <Compile Include="Audit.Model\AuditResult.cs" />
     <Compile Include="Audit.Model\AuditStatusEnum.cs" />
+    <Compile Include="Audit.Model\CarcinomaTestingAudit.cs" />
     <Compile Include="Audit.Model\CaseHasNotFoundClientAudit.cs" />
     <Compile Include="Audit.Model\CaseHasNotFoundProviderAudit.cs" />
     <Compile Include="Audit.Model\CaseHasUnfinaledPeerReviewAudit.cs" />
@@ -548,6 +549,11 @@
     <Compile Include="HL7View\ECW\ECWPIDView.cs" />
     <Compile Include="HL7View\ECW\ECWORCView.cs" />
     <Compile Include="Specimen.Model\OrderedOn.cs" />
+    <Compile Include="Surgical\CarcinomaMeasure.cs" />
+    <Compile Include="Surgical\CarcinomaMeasureCollection.cs" />
+    <Compile Include="Surgical\ColorectalCarcinomaMeasure.cs" />
+    <Compile Include="Surgical\EndometrialCarcinomaMeasure.cs" />
+    <Compile Include="Surgical\KeyWordCollection.cs" />
     <Compile Include="Surgical\PQRIKeyWordCollection.cs" />
     <Compile Include="Surgical\PQRSAgeDefinitionEnum.cs" />
     <Compile Include="Surgical\PQRSBarrettsEsophagusMeasure.cs" />
@@ -559,6 +565,7 @@
     <Compile Include="Surgical\PQRSMeasureCollection.cs" />
     <Compile Include="Surgical\PQRSMelanomaMeasure.cs" />
     <Compile Include="Surgical\PQRSRadicalProstatectomyMeasure.cs" />
+    <Compile Include="Surgical\UterineCarcinomaMeasure.cs" />
     <Compile Include="Test\CBFBinv16\CBFBinv16Test.cs" />
     <Compile Include="Test\ChromosomeAnalysisForFetalAnomaly\ChromosomeAnalysisForFetalAnomalyNoGrowthResult.cs" />
     <Compile Include="Test\ChromosomeAnalysis\ChromosomeAnalysisInconclusiveResult.cs" />
