--- a/UI/UserInterface.csproj
+++ b/UI/UserInterface.csproj
@@ -458,6 +458,9 @@
       <DependentUpon>ReportOrderMolecularAnalysisDialog.xaml</DependentUpon>
     </Compile>
     <Compile Include="SortDirectionAdorner.cs" />
+    <Compile Include="Surgical\CarcinomaTestingSignoutPage.xaml.cs">
+      <DependentUpon>CarcinomaTestingSignoutPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Surgical\DictationTemplatePage.xaml.cs">
       <DependentUpon>DictationTemplatePage.xaml</DependentUpon>
     </Compile>
@@ -2058,6 +2061,10 @@
     <Page Include="ReportOrder\ReportOrderMolecularAnalysisDialog.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Surgical\CarcinomaTestingSignoutPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Surgical\DictationTemplatePage.xaml">
       <Generator>MSBuild:Compile</Generator>
