--- a/Business/BusinessObjects.csproj
+++ b/Business/BusinessObjects.csproj
@@ -152,6 +152,7 @@
     <Compile Include="Audit.Model\CaseHasNotFoundClientAudit.cs" />
     <Compile Include="Audit.Model\CaseHasNotFoundProviderAudit.cs" />
     <Compile Include="Audit.Model\CaseHasUnfinaledPeerReviewAudit.cs" />
+    <Compile Include="Audit.Model\CCCPAudit.cs" />
     <Compile Include="Audit.Model\ClientNotSetAudit.cs" />
     <Compile Include="Audit.Model\AccessionOrderAudit.cs" />
     <Compile Include="Audit.Model\CanWomensHealthProfileBeFinaledAudit.cs" />
