--- a/Business/BusinessObjects.csproj
+++ b/Business/BusinessObjects.csproj
@@ -166,7 +166,7 @@
     <Compile Include="Audit.Model\LynchSyndromeAudit.cs" />
     <Compile Include="Audit.Model\PapCorrelationAudit.cs" />
     <Compile Include="Audit.Model\PhoneNumberAudit.cs" />
-    <Compile Include="Audit.Model\PqrsAudit.cs" />
+    <Compile Include="Audit.Model\PQRSIsRequiredAudit.cs" />
     <Compile Include="Audit.Model\ProviderDisplayNameAudit.cs" />
     <Compile Include="Audit.Model\ProviderNpiAudit.cs" />
     <Compile Include="Audit.Model\SigningUserIsAssignedUserAudit.cs" />
