--- a/UI/UserInterface.csproj
+++ b/UI/UserInterface.csproj
@@ -41,7 +41,7 @@
     <MapFileExtensions>false</MapFileExtensions>
     <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
     <WebPage>publish.htm</WebPage>
-    <ApplicationRevision>287</ApplicationRevision>
+    <ApplicationRevision>294</ApplicationRevision>
     <ApplicationVersion>10.1.1.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -440,7 +440,7 @@
     <Compile Include="PantherOrdersDialog.xaml.cs">
       <DependentUpon>PantherOrdersDialog.xaml</DependentUpon>
     </Compile>
-    <Compile Include="PantherOrdersReport.cs" />
+    <Compile Include="PantherAliquotReport.cs" />
     <Compile Include="ReportDistribution\ReportDistributionWorkspace.xaml.cs">
       <DependentUpon>ReportDistributionWorkspace.xaml</DependentUpon>
     </Compile>
