--- a/Business/BusinessObjects.csproj
+++ b/Business/BusinessObjects.csproj
@@ -163,9 +163,12 @@
     <Compile Include="Audit.Model\HER2OKToAcceptAudit.cs" />
     <Compile Include="Audit.Model\IntraoperativeConsultationCorrelationAudit.cs" />
     <Compile Include="Audit.Model\IntraoperativeConsultationFinalAudit.cs" />
+    <Compile Include="Audit.Model\IsPathologistSignoutHandledAuditCollection.cs" />
     <Compile Include="Audit.Model\LynchSyndromeAudit.cs" />
     <Compile Include="Audit.Model\PapCorrelationAudit.cs" />
+    <Compile Include="Audit.Model\PathologistSignoutAuditCollection.cs" />
     <Compile Include="Audit.Model\PhoneNumberAudit.cs" />
+    <Compile Include="Audit.Model\PQRSIsHandledAudit.cs" />
     <Compile Include="Audit.Model\PQRSIsRequiredAudit.cs" />
     <Compile Include="Audit.Model\ProviderDisplayNameAudit.cs" />
     <Compile Include="Audit.Model\ProviderNpiAudit.cs" />
