--- a/UI/UserInterface.csproj
+++ b/UI/UserInterface.csproj
@@ -41,7 +41,7 @@
     <MapFileExtensions>false</MapFileExtensions>
     <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
     <WebPage>publish.htm</WebPage>
-    <ApplicationRevision>294</ApplicationRevision>
+    <ApplicationRevision>297</ApplicationRevision>
     <ApplicationVersion>10.1.1.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -331,6 +331,9 @@
     <Compile Include="Gross\TemplateWord.cs" />
     <Compile Include="GroupingListView.cs" />
     <Compile Include="ListViewSorter.cs" />
+    <Compile Include="Login\MissingInformationPage.xaml.cs">
+      <DependentUpon>MissingInformationPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Login\FinalizeAccession\FacilityColorConverter.cs" />
     <Compile Include="Login\FinalizeAccession\FixationUpdate.cs" />
     <Compile Include="Login\FinalizeAccession\SpecimenMappingPage.xaml.cs">
@@ -603,6 +606,10 @@
     </Compile>
     <Compile Include="Test\CancelATestPath.cs" />
     <Compile Include="Test\EGFRToALKReflexAnalysisStatusColorConverter.cs" />
+    <Compile Include="Test\MissingInformationResultPage.xaml.cs">
+      <DependentUpon>MissingInformationResultPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Test\MissingInformationResultPath.cs" />
     <Compile Include="Test\ROS1ResultPath.cs" />
     <Compile Include="Test\ROS1ResultPage.xaml.cs">
       <DependentUpon>ROS1ResultPage.xaml</DependentUpon>
@@ -1942,6 +1949,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Resource>
+    <Page Include="Login\MissingInformationPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Login\FinalizeAccession\SpecimenMappingPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -2195,6 +2206,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="Test\AccessionLabelDialog.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Test\MissingInformationResultPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -3909,6 +3924,11 @@
     <Content Include="CEFSharp\CefSharp.Wpf.dll" />
     <Content Include="CEFSharp\CefSharp.Wpf.Example.exe" />
     <Content Include="CEFSharp\CefSharp.Wpf.Example.vshost.exe" />
+    <EmbeddedResource Include="XMLFile2.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <Resource Include="Resources\Report.jpg" />
+    <Resource Include="Resources\missinginfo.jpg" />
     <Resource Include="Resources\Restore.png" />
     <Resource Include="CEFSharp\CefSharp.Wpf.xml" />
     <Resource Include="CEFSharp\CefSharp.xml" />
