Change Physician Lookup to inculde homeBase info, physician entry to allow selection of home base client

--- a/Business/BusinessObjects.csproj
+++ b/Business/BusinessObjects.csproj
@@ -278,6 +278,8 @@
     <Compile Include="Client.Model\ClientSupplyOrderDetailCollection.cs" />
     <Compile Include="Client.Model\ClientSupplyCategory.cs" />
     <Compile Include="Client.Model\PhysicianClientDistributionCollection.cs" />
+    <Compile Include="Client.Model\ProviderClient.cs" />
+    <Compile Include="Client.Model\ProviderClientCollection.cs" />
     <Compile Include="ClientOrder.Model\ClientOrderDetailView.cs" />
     <Compile Include="Client\AllClientGroup.cs" />
     <Compile Include="Client\AthenaPhysicianClientDistribution.cs" />
