--- a/YellowstonePathology.OptimusPrime/YellowstonePathology.OptimusPrime.csproj
+++ b/YellowstonePathology.OptimusPrime/YellowstonePathology.OptimusPrime.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HPVInvalidResult.cs" />
     <Compile Include="HPVResultHandler.cs" />
     <Compile Include="HPVNegativeResult.cs" />
     <Compile Include="HPVPositiveResult.cs" />
