Add UserControl for amendment edit and add to HER2ByISH path

--- a/UI/UserInterface.csproj
+++ b/UI/UserInterface.csproj
@@ -175,6 +175,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="AmendmentPage.xaml.cs">
+      <DependentUpon>AmendmentPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="AuthenticationPath.cs" />
     <Compile Include="Billing\BillingPage.xaml.cs">
       <DependentUpon>BillingPage.xaml</DependentUpon>
@@ -1832,6 +1835,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="AmendmentListPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="AmendmentPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
