--- a/Business/BusinessObjects.csproj
+++ b/Business/BusinessObjects.csproj
@@ -481,7 +481,7 @@
     <Compile Include="Test\HPVTWI\HPVTWIInvalidResult.cs" />
     <Compile Include="Test\MissingInformation\MissingInformationTest.cs" />
     <Compile Include="Test\MissingInformation\MissingInformationTestOrder.cs" />
-    <Compile Include="Test\NGCT\NGCTIndeterminateResult.cs" />
+    <Compile Include="Test\NGCT\NGCTInvalidResult.cs" />
     <Compile Include="Test\PantherAliquotList.cs" />
     <Compile Include="Test\PantherOrderList.cs" />
     <Compile Include="Persistence\BooleanPropertyBridge.cs" />
